# PancakeECS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
build-debug/: CMakeCache.txt  Makefile  PancakeECS.cbp  PfannkuchenECS.cbp  cmake_install.cmake
src/: ComponentData.h  ComponentVector.h  ComponentView.h  ComponentViewBase.cpp  ComponentViewBase.h  ECSManager.cpp  ECSManager.h  Entity.h  EntityID.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  TypeId.cpp  TypeId.h  ctpl_stl.h
